...
            verticalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            items(products) { p ->
                MenuProductCard(
                    product = p,
                    Modifier
                        .semantics { contentDescription = "menu product card item" }
                        .clickable {
                        onProductClick(p)
                    }
                )
            }
        }
...
