...
        ) {
            items(products) { p ->
                HighlightProductCard(
                    product = p,
                    Modifier
                        .semantics {
                            contentDescription = "highlight product card item"
                        }
                        .clickable {
                            onProductClick(p)
                        },
                    onOrderClick = onOrderClick
                )
...
